--- a/teststaticapp/templates/index.html
+++ b/teststaticapp/templates/index.html
@@ -1,12 +1,15 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Home Page</title>
+  <title>Index Page</title>
+  <link rel="stylesheet" href="{% static 'css/test.css' %}">
 </head>
 <body>
-  <h1>Hello Pizza!</h1>
+  <h1>Static Index Page</h1>
+  <img src="{% static 'img/firmpizza.png' %}">
 </body>
 </html>
