--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,16 @@
+
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Index Page</title>
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-  <h1>Hello</h1>
+  <h2>Index Page</h2>
+  <!-- <img src="{% static 'img/pizza.jpg' %}" alt=""> -->
 </body>
 </html>
